First three done

--- a/Szakdolgozat/Thesis/src/bib/mybib.bib
+++ b/Szakdolgozat/Thesis/src/bib/mybib.bib
@@ -1,276 +1,523 @@
-@online{Luxemburg2025,
-  author    = {Deloitte Luxemburg},
-  title     = {{ Crunch time series for CFOs: Finance 2025 revisited }},
-  year      = {2025},
-  url       = {https://www.deloitte.com/us/en/what-we-do/capabilities/finance-transformation/articles/future-finance-trends-2025.html},
-  note      = {Accessed: 2025-10-05}
+@online{Deloitte-Finance-2025,
+  organization = {Deloitte Luxemburg},
+  year         = {2025},
+  title        = {Crunch time series for CFOs: Finance 2025 revisited},
+  entrysubtype = {report},
+  publisher    = {Deloitte},
+  url          = {https://www.deloitte.com/us/en/what-we-do/capabilities/finance-transformation/articles/future-finance-trends-2025.html},
+  urldate      = {2025-10-05}
 }
 
-@online{Westgaver2025,
-  author    = {Justin Morel de Westgaver, Michael Cravatte, Fethi Sadouki},
-  title     = {{ From controlling to strategic planning: How to maximize your finance function }},
-  year      = {2025},
-  url       = {https://www.deloitte.com/lu/en/our-thinking/future-of-advice/from-controlling-to-strategic-planning-how-to-maximize-your-finance-function.html},
-  note      = {Accessed: 2025-10-05}
+@online{Deloitte-Controlling-Change,
+  author       = {Morel de Westgaver, Justin and Cravatte, Michael and Sadouki, Fethi},
+  year         = {2025},
+  title        = {From controlling to strategic planning: How to maximize your finance function},
+  entrysubtype = {website},
+  publisher    = {Deloitte},
+  url          = {https://www.deloitte.com/lu/en/our-thinking/future-of-advice/from-controlling-to-strategic-planning-how-to-maximize-your-finance-function.html},
+  urldate      = {2025-10-05}
 }
 
-@online{Oschlisniok2025,
-  author    = {Thomas Oschlisniok},
-  title     = {{ Finance 2025 – Focus on the finance function of the future }},
-  year      = {2025},
-  url       = {https://kpmg.com/ch/en/insights/transformation/finance-function-2025.html},
-  note      = {Accessed: 2025-10-05}
+@online{KPMG-Finance-2025,
+  author       = {Oschlisniok, Thomas},
+  year         = {2025},
+  title        = {Finance 2025 -- Focus on the finance function of the future},
+  entrysubtype = {report},
+  publisher    = {KPMG},
+  url          = {https://kpmg.com/ch/en/insights/transformation/finance-function-2025.html},
+  urldate      = {2025-10-05}
 }
 
-@online{PwC2025,
-  author    = {PwC},
-  title     = {{ Future of finance: How you can lead with insight, not just oversight }},
-  year      = {2025},
-  url       = {https://www.pwc.com/us/en/services/consulting/business-transformation/library/future-of-finance.html},
-  note      = {Accessed: 2025-10-05}
+@online{PwC-Future-of-Finance,
+  organization = {PwC},
+  year         = {2025},
+  title        = {Future of finance: How you can lead with insight, not just oversight},
+  entrysubtype = {website},
+  publisher    = {PwC},
+  url          = {https://www.pwc.com/us/en/services/consulting/business-transformation/library/future-of-finance.html},
+  urldate      = {2025-10-05}
 }
 
-@online{Gartner2025,
-  author    = {Gartner},
-  title     = {{ Finance 2030: 8 Forces Shaping the Future of Finance }},
-  year      = {2025},
-  url       = {https://www.gartner.com/en/finance/insights/future-of-finance-2030},
-  note      = {Accessed: 2025-10-05}
+@online{Gartner-Finance-2030,
+  organization = {Gartner},
+  year         = {2025},
+  title        = {Finance 2030: 8 Forces Shaping the Future of Finance},
+  entrysubtype = {report},
+  publisher    = {Gartner},
+  url          = {https://www.gartner.com/en/finance/insights/future-of-finance-2030},
+  urldate      = {2025-10-05}
 }
 
-@online{Plaschke2018,
-  author    = {Frank Plaschke, Ishaan Seth, Rob Whiteman},
-  title     = {{ Bots, algorithms, and the future of the finance function }},
-  year      = {2018},
-  url       = {https://www.mckinsey.com/capabilities/strategy-and-corporate-finance/our-insights/bots-algorithms-and-the-future-of-the-finance-function},
-  note      = {Accessed: 2025-10-05}
+@online{McKinsey-Future-of-Finance,
+  author       = {Plaschke, Frank and Seth, Ishaan and Whiteman, Rob},
+  year         = {2018},
+  title        = {Bots, algorithms, and the future of the finance function},
+  entrysubtype = {report},
+  publisher    = {McKinsey},
+  url          = {https://www.mckinsey.com/capabilities/strategy-and-corporate-finance/our-insights/bots-algorithms-and-the-future-of-the-finance-function},
+  urldate      = {2025-10-05}
 }
 
-@online{Partners2025,
-  author    = {Ardent Partners},
-  title     = {{ The State of ePayables 2025 Report }},
-  year      = {2025},
-  url       = {https://tradeshift.com/state-of-epayables-2025-report/},
-  note      = {Accessed: 2025-10-05}
+@online{Ardent-ePayables-Report,
+  organization = {Ardent Partners},
+  year         = {2025},
+  title        = {The State of ePayables 2025 Report},
+  entrysubtype = {report},
+  publisher    = {Ardent Partners},
+  url          = {https://tradeshift.com/state-of-epayables-2025-report/},
+  urldate      = {2025-10-05}
 }
 
-@online{IBM2024,
-  author    = {IBM},
-  title     = {{ What is business process management (BPM)? }},
-  year      = {2024},
-  url       = {https://www.ibm.com/think/topics/business-process-management},
-  note      = {Accessed: 2025-10-08}
+@online{IBM-BPM,
+  organization = {IBM},
+  year         = {2024},
+  title        = {What is business process management (BPM)?},
+  entrysubtype = {website},
+  publisher    = {IBM},
+  url          = {https://www.ibm.com/think/topics/business-process-management},
+  urldate      = {2025-10-08}
 }
 
-@online{Gartner,
-  author    = {Gartner},
-  title     = {{ Business Process Management (BPM) }},
-  url       = {https://www.gartner.com/en/information-technology/glossary/business-process-management-bpm}
+@online{Garner-BPM,
+  organization = {Gartner},
+  title        = {Business Process Management (BPM)},
+  entrysubtype = {website},
+  publisher    = {Gartner},
+  url          = {https://www.gartner.com/en/information-technology/glossary/business-process-management-bpm}
 }
 
-@online{Pratt2023,
-  author    = {Mary K. Pratt},
-  title     = {{ What is business process mapping? }},
-  year      = {2023},
-  url       = {https://www.techtarget.com/searchcio/definition/process-mapping},
-  note      = {Accessed: 2025-10-08}
+@online{TechTarget-BPM,
+  author       = {Pratt, Mary K.},
+  year         = {2023},
+  title        = {What is business process mapping?},
+  entrysubtype = {website},
+  publisher    = {TechTarget},
+  url          = {https://www.techtarget.com/searchcio/definition/process-mapping},
+  urldate      = {2025-10-08}
 }
 
-@online{Kissflow,
-  author    = {Kissflow},
-  title     = {{ 5 stages in Business Process Management (BPM) Lifecycle }},
-  url       = {https://kissflow.com/workflow/bpm/bpm-lifecycle-guide/},
-  note      = {Accessed: 2025-10-08}
+@online{Kissflow-BPM-Lifecycle,
+  organization = {Kissflow},
+  title        = {5 stages in Business Process Management (BPM) Lifecycle},
+  entrysubtype = {website},
+  publisher    = {Kissflow},
+  url          = {https://kissflow.com/workflow/bpm/bpm-lifecycle-guide/},
+  urldate      = {2025-10-08}
 }
 
-@online{Lawton2023,
-  author    = {George Lawton},
-  title     = {{ RPA vs. BPM: How are they different? }},
-  year      = {2023},
-  url       = {https://www.techtarget.com/searchcio/tip/RPA-vs-BPM-How-are-they-different},
-  note      = {Accessed: 2025-10-08}
+@online{TechTarget-RPAvsBPM,
+  author       = {Lawton, George},
+  year         = {2023},
+  title        = {RPA vs. BPM: How are they different?},
+  entrysubtype = {article},
+  journaltitle = {techtarget.com},
+  url          = {https://www.techtarget.com/searchcio/tip/RPA-vs-BPM-How-are-they-different},
+  urldate      = {2025-10-08}
 }
 
-@online{Kissflow2025,
-  author    = {Kissflow},
-  title     = {{ RPA vs. BPM: What's the Difference? }},
-  year      = {2025},
-  url       = {https://kissflow.com/workflow/bpm/rpa-vs-bpm-whats-the-difference},
-  note      = {Accessed: 2025-10-08}
+@online{Kissflow-RPAvsBPM,
+  organization = {Kissflow},
+  year         = {2025},
+  title        = {RPA vs. BPM: What's the Difference?},
+  entrysubtype = {article},
+  journaltitle = {kissflow.com},
+  url          = {https://kissflow.com/workflow/bpm/rpa-vs-bpm-whats-the-difference},
+  urldate      = {2025-10-08}
 }
 
-@online{IBM2021,
-  author    = {IBM},
-  title     = {{ What is Robotic Process Automation (RPA)? }},
-  year      = {2021},
-  url       = {https://www.ibm.com/think/topics/rpa},
-  note      = {Accessed: 2025-10-08}
+@online{IBM-RPA,
+  organization = {IBM},
+  year         = {2021},
+  title        = {What is Robotic Process Automation (RPA)?},
+  entrysubtype = {report},
+  publisher    = {ibm.com},
+  url          = {https://www.ibm.com/think/topics/rpa},
+  urldate      = {2025-10-08}
 }
 
-@online{SAPWhat,
-  author    = {SAP},
-  title     = {{ What is robotic process automation (RPA)? }},
-  url       = {https://www.sap.com/products/technology-platform/process-automation/what-is-rpa.html},
-  note      = {Accessed: 2025-10-08}
+@online{SAP-RPA,
+  organization = {SAP},
+  title        = {What is robotic process automation (RPA)?},
+  entrysubtype = {website},
+  publisher    = {sap.com},
+  url          = {https://www.sap.com/products/technology-platform/process-automation/what-is-rpa.html},
+  urldate      = {2025-10-08}
 }
 
-@online{Williams2021,
-  author    = {Paula Williams},
-  title     = {{ Five Ways to Use RPA in Finance }},
-  year      = {2021},
-  url       = {https://www.ibm.com/think/topics/rpa-for-finance},
-  note      = {Accessed: 2025-10-08}
+@online{IBM-RPA-in-Finance,
+  author       = {Williams, Paula},
+  year         = {2021},
+  title        = {Five Ways to Use RPA in Finance},
+  entrysubtype = {website},
+  publisher    = {ibm.com},
+  url          = {https://www.ibm.com/think/topics/rpa-for-finance},
+  urldate      = {2025-10-08}
 }
 
-@online{Gartner2024,
-  author    = {Gartner},
-  title     = {{ 3 Tactics to Demonstrate RPA’s Impact in Finance }},
-  year      = {2024},
-  url       = {https://www.gartner.com/en/finance/trends/finance-rpa},
-  note      = {Accessed: 2025-10-09}
+@online{Gartner-RPA-in-Finance,
+  organization = {Gartner},
+  year         = {2024},
+  title        = {3 Tactics to Demonstrate RPA’s Impact in Finance},
+  entrysubtype = {report},
+  publisher    = {gartner.com},
+  url          = {https://www.gartner.com/en/finance/trends/finance-rpa},
+  urldate      = {2025-10-09}
 }
 
-@online{Anywhere,
-  author    = {Automation Anywhere},
-  title     = {{ What is Attended vs Unattended Robotic Process Automation (RPA)? }},
-  url       = {https://www.automationanywhere.com/rpa/attended-vs-unattended-rpa},
-  note      = {Accessed: 2025-10-08}
+@online{Automation-Attended-vs-Unattended,
+  organization = {Automation Anywhere},
+  title        = {What is Attended vs Unattended Robotic Process Automation (RPA)?},
+  entrysubtype = {website},
+  publisher    = {automationanywhere.com},
+  url          = {https://www.automationanywhere.com/rpa/attended-vs-unattended-rpa},
+  urldate      = {2025-10-08}
 }
 
-@online{Microsoft,
-  author    = {Microsoft},
-  title     = {{ Attended and unattended scenarios }},
-  url       = {https://learn.microsoft.com/en-us/power-automate/guidance/planning/attended-unattended},
-  note      = {Accessed: 2025-10-08}
+@online{Microsoft-Attended-vs-Unattended,
+  organization = {Microsoft},
+  title        = {Attended and unattended scenarios},
+  entrysubtype = {website},
+  publisher    = {learn.microsoft.com},
+  url          = {https://learn.microsoft.com/en-us/power-automate/guidance/planning/attended-unattended},
+  urldate      = {2025-10-08}
 }
 
-@online{Gartner1,
-  author    = {Gartner},
-  title     = {{ Hyperautomation }},
-  url       = {https://www.gartner.com/en/information-technology/glossary/hyperautomation},
-  note      = {Accessed: 2025-10-08}
+@online{Gartner-Hyperautomation,
+  organization = {Gartner},
+  title        = {Hyperautomation},
+  entrysubtype = {website},
+  publisher    = {gartner.com},
+  url          = {httpsNext: //www.gartner.com/en/information-technology/glossary/hyperautomation},
+  urldate      = {2025-10-08}
 }
 
-@online{Gartner20251,
-  author    = {Gartner},
-  title     = {{ Gartner Identifies the Top Strategic Technology Trends for 2026 }},
-  year      = {2025},
-  url       = {https://www.gartner.com/en/newsroom/press-releases/2025-10-20-gartner-identifies-the-top-strategic-technology-trends-for-2026},
-  note      = {Accessed: 2025-10-08}
+@online{Gartner-Strategic-Technology-Trends,
+  organization = {Gartner},
+  year         = {2025},
+  title        = {Gartner Identifies the Top Strategic Technology Trends for 2026},
+  entrysubtype = {website},
+  publisher    = {gartner.com},
+  url          = {https://www.gartner.com/en/newsroom/press-releases/2025-10-20-gartner-identifies-the-top-strategic-technology-trends-for-2026},
+  urldate      = {2025-10-08}
 }
 
-@online{Team2021,
-  author    = {IBM Cloud Education Team},
-  title     = {{ Differentiating Between Intelligent Automation and Hyperautomation }},
-  year      = {2021},
-  url       = {https://www.ibm.com/think/topics/intelligent-automation-vs-hyperautomation},
-  note      = {Accessed: 2025-10-08}
+@online{IBM-IRPA-vs-Hyperautomation,
+  author       = {{IBM Cloud Education Team}},
+  year         = {2021},
+  title        = {Differentiating Between Intelligent Automation and Hyperautomation},
+  entrysubtype = {website},
+  publisher    = {ibm.com},
+  url          = {https://www.ibm.com/think/topics/intelligent-automation-vs-hyperautomation},
+  urldate      = {2025-10-08}
 }
 
-@online{Kissflow20251,
-  author    = {Kissflow},
-  title     = {{ Hyperautomation: 101 Ultimate Guide for 2025-26 }},
-  year      = {2025},
-  url       = {https://kissflow.com/workflow/hyperautomation-complete-guide},
-  note      = {Accessed: 2025-10-08}
+@online{Kissflow-Hyperautomation,
+  organization = {Kissflow},
+  year         = {2025},
+  title        = {Hyperautomation: 101 Ultimate Guide for 2025-26},
+  entrysubtype = {website},
+  publisher    = {kissflow.com},
+  url          = {https://kissflow.com/workflow/hyperautomation-complete-guide},
+  urldate      = {2025-10-08}
 }
 
-@online{SAPSAP,
-  author    = {SAP},
-  title     = {{ SAP Business Technology Platform }},
-  url       = {https://www.sap.com/products/technology-platform.html},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-BTP-Portfolio,
+  organization = {SAP},
+  title        = {SAP Business Technology Platform},
+  entrysubtype = {website},
+  publisher    = {sap.com},
+  url          = {https://www.sap.com/products/technology-platform.html},
+  urldate      = {2025-10-20}
 }
 
-@online{SAPWhat1,
-  author    = {SAP},
-  title     = {{ What is SAP Business Technology Platform? }},
-  url       = {https://www.sap.com/sea/products/technology-platform/what-is-sap-business-technology-platform.html},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-BTP-Definition,
+  organization = {SAP},
+  title        = {What is SAP Business Technology Platform?},
+  entrysubtype = {website},
+  publisher    = {sap.com},
+  url          = {https://www.sap.com/sea/products/technology-platform/what-is-sap-business-technology-platform.html},
+  urldate      = {2025-10-20}
 }
 
-@online{SAPWhat2,
-  author    = {SAP},
-  title     = {{ What are SAP BTP platform capabilities? }},
-  url       = {https://www.sap.com/products/technology-platform/what-is-sap-business-technology-platform.html},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-BTP-Capabilities,
+  organization = {SAP},
+  title        = {What are SAP BTP platform capabilities?},
+  entrysubtype = {website},
+  publisher    = {sap.com},
+  url          = {https://www.sap.com/products/technology-platform/what-is-sap-business-technology-platform.html},
+  urldate      = {2025-10-20}
 }
 
-@online{Consulting,
-  author    = {NAV IT Consulting},
-  title     = {{ Transform Business with SAP Business Technology Platform (SAP BTP) }},
-  url       = {https://nav-it.com/transform-business-with-sap-business-technology-platform-sap-btp},
-  note      = {Accessed: 2025-10-20}
+@online{NAVIT-BTP,
+  organization = {NAV IT Consulting},
+  year         = {2024},
+  title        = {Transform Business with SAP Business Technology Platform (SAP BTP)},
+  entrysubtype = {website},
+  publisher    = {nav-it.com},
+  url          = {https://nav-it.com/transform-business-with-sap-business-technology-platform-sap-btp},
+  urldate      = {2025-10-20}
 }
 
-@online{SAPFeature,
-  author    = {SAP},
-  title     = {{ Feature Scope Description for SAP BTP, Cloud Foundry, ABAP, and Kyma Environments }},
-  url       = {https://help.sap.com/doc/5e8107bf49684962b897217040398007/Cloud/en-US/SAP_BTP_FSD.pdf},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-BTP-Features,
+  organization = {SAP},
+  year         = {2025},
+  title        = {Feature Scope Description for SAP BTP, Cloud Foundry, ABAP, and Kyma Environments},
+  entrysubtype = {report},
+  publisher    = {sap.com},
+  url          = {https://help.sap.com/doc/5e8107bf49684962b897217040398007/Cloud/en-US/SAP_BTP_FSD.pdf},
+  urldate      = {2025-10-20}
 }
 
-@online{Gupta2023,
-  author    = {Raja Gupta},
-  title     = {{ Important Cloud Terminologies for Beginners }},
-  year      = {2023},
-  url       = {https://medium.com/@raja.gupta20/important-cloud-terminologies-for-beginners-50e474bbaf22},
-  note      = {Accessed: 2025-10-20}
+@online{Medium-Cloud-Terminologies,
+  author       = {Gupta, Raja},
+  year         = {2023},
+  title        = {Important Cloud Terminologies for Beginners},
+  entrysubtype = {blog},
+  publisher    = {medium.com},
+  url          = {https://medium.com/@raja.gupta20/important-cloud-terminologies-for-beginners-50e474bbaf22},
+  urldate      = {2025-10-20}
 }
 
-@online{Gupta20231,
-  author    = {Raja Gupta},
-  title     = {{ Explaining SAP Business Technology Platform (SAP BTP) to a Beginner }},
-  year      = {2023},
-  url       = {https://community.sap.com/t5/technology-blog-posts-by-sap/explaining-sap-business-technology-platform-sap-btp-to-a-beginner-2025/ba-p/13557182},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-BTP-for-Beginner,
+  author       = {Gupta, Raja},
+  year         = {2023},
+  title        = {Explaining SAP Business Technology Platform (SAP BTP) to a Beginner},
+  entrysubtype = {blog},
+  publisher    = {community.sap.com},
+  url          = {https://community.sap.com/t5/technology-blog-posts-by-sap/explaining-sap-business-technology-platform-sap-btp-to-a-beginner-2025/ba-p/13557182},
+  urldate      = {2025-10-20}
 }
 
-@online{Gupta20232,
-  author    = {Raja Gupta},
-  title     = {{ Demystifying SAP Build for Beginners }},
-  year      = {2023},
-  url       = {https://community.sap.com/t5/technology-blog-posts-by-sap/demystifying-sap-build-for-beginners/ba-p/13553828},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-Demystifying-SAP-Build,
+  author       = {Gupta, Raja},
+  year         = {2023},
+  title        = {Demystifying SAP Build for Beginners},
+  entrysubtype = {blog},
+  publisher    = {community.sap.com},
+  url          = {https://community.sap.com/t5/technology-blog-posts-by-sap/demystifying-sap-build-for-beginners/ba-p/13553828},
+  urldate      = {2025-10-20}
 }
 
-@online{SAPWhat3,
-  author    = {SAP},
-  title     = {{ What is SAP Build? }},
-  url       = {https://help.sap.com/docs/build/sap-build-core/what-is-sap-build#loio7e50fa5e724c49d1a4352848275fd3cc__section_build_code},
-  note      = {Accessed: 2025-10-20}
+@online{SAP-Build,
+  organization = {SAP},
+  title        = {What is SAP Build?},
+  entrysubtype = {website},
+  publisher    = {help.sap.com},
+  url          = {https://help.sap.com/docs/build/sap-build-core/what-is-sap-build#loio7e50fa5e724c49d1a4352848275fd3cc__section_build_code},
+  urldate      = {2025-10-20}
 }
 
-@online{SAP2022,
-  author    = {SAP},
-  title     = {{ Feature Scope Description for SAP Build Process Automation }},
-  year      = {2022},
-  url       = {https://help.sap.com/doc/b3c2de746b0645aeb627deda35b896a0/Cloud/en-US/11df00c55daf425bb7a447d63dbd5484.pdf },
-  note      = {Accessed: 2025-10-20}
+@online{SAP-BPA-Features,
+  organization = {SAP},
+  year         = {2022},
+  title        = {Feature Scope Description for SAP Build Process Automation},
+  entrysubtype = {report},
+  publisher    = {sap.com},
+  url          = {https://help.sap.com/doc/b3c2de746b0645aeb627deda35b896a0/Cloud/en-US/11df00c55daf425bb7a447d63dbd5484.pdf},
+  urldate      = {2025-10-20}
 }
 
-@online{SAPCreate,
-  author    = {SAP},
-  title     = {{ Create low-code digital workspaces }},
-  url       = {https://www.sap.com/products/technology-platform/workzone.html },
-  note      = {Accessed: 2025-10-20}
+@online{SAP-Work-Zone,
+  organization = {SAP},
+  title        = {Create low-code digital workspaces},
+  entrysubtype = {website},
+  publisher    = {sap.com},
+  url          = {https://www.sap.com/products/technology-platform/workzone.html},
+  urldate      = {2025-10-20}
 }
 
-@online{SAPWhat4,
-  author    = {SAP},
-  title     = {{ What Is SAP Build Work Zone, standard edition? }},
-  url       = {https://help.sap.com/docs/build-work-zone-standard-edition/sap-build-work-zone-standard-edition/what-is-sap-build-work-zone-standard-edition},
-  note      = {Accessed: 2025-10-20}
-}
-```
-
-@report{Jeney,
-  author      = {Jeney, Gábor},
-  institution = {Budapesti Műszaki és Gazdaságtudományi Egyetem, Híradástechnikai Tanszék},
-  location    = {Budapest},
-  note        = {\url{http://www.mcl.hu/~jeneyg/kinezet.pdf}},
-  title       = {Hogyan néz ki egy igényes dokumentum? {N}éhány szóban az alapvető tipográfiai szabályokról},
-  type        = {techreport},
-  year        = {2014},
+@online{SAP-WZ-Standard,
+  organization = {SAP},
+  title        = {What Is SAP Build Work Zone, standard edition?},
+  entrysubtype = {website},
+  publisher    = {help.sap.com},
+  url          = {https://help.sap.com/docs/build-work-zone-standard-edition/sap-build-work-zone-standard-edition/what-is-sap-build-work-zone-standard-edition},
+  urldate      = {2025-10-20}
 }
 
+@online{SAP-LIV,
+  author       = {Karrennagari, Lingeswar},
+  year         = {2024},
+  title        = {Logistics Invoice Verification},
+  entrysubtype = {blog},
+  publisher    = {community.sap.com},
+  url          = {https://community.sap.com/t5/supply-chain-management-blog-posts-by-members/logistics-invoice-verification/ba-p/13740502},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-Managing-Invoices,
+  organization = {SAP},
+  title        = {Managing Invoices},
+  entrysubtype = {website},
+  publisher    = {learning.sap.com},
+  url          = {https://learning.sap.com/courses/exploring-end-to-end-business-processes-in-sap-business-suite/managing-invoices_fe0e5798-20aa-4b6e-aa82-fe7279f48265},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-Non-PO-Invoices,
+  organization = {SAP},
+  title        = {Creating Non-PO Invoices},
+  entrysubtype = {website},
+  publisher    = {learning.sap.com},
+  url          = {https://learning.sap.com/learning-journeys/introducing-sap-ariba-procurement-functionality/creating-non-po-invoices},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-Tolerance-Keys-Part1,
+  author       = {{Former Member}},
+  year         = {2014},
+  title        = {Invoice Tolerance Keys - An insight - Part 1},
+  entrysubtype = {blog},
+  publisher    = {community.sap.com},
+  url          = {https://community.sap.com/t5/enterprise-resource-planning-blog-posts-by-members/invoice-tolerance-keys-an-insight-part-1/bc-p/13085899},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-Tolerance-Keys-Part2,
+  author       = {{Former Member}},
+  year         = {2015},
+  title        = {Invoice Tolerance Keys - An insight - Part 2},
+  entrysubtype = {blog},
+  publisher    = {community.sap.com},
+  url          = {https://community.sap.com/t5/enterprise-resource-planning-blog-posts-by-members/invoice-tolerance-keys-an-insight-part-2/ba-p/13195017},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-ERS,
+  organization = {SAP},
+  year         = {2025},
+  title        = {Evaluated Receipt Settlement (ERS)},
+  entrysubtype = {website},
+  publisher    = {help.sap.com},
+  url          = {https://help.sap.com/docs/SAP_S4HANA_ON-PREMISE/f340785101c548c9beeda9284efd18a0/67eec353b677b44ce10000000a174cb4.html},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-EDI,
+  organization = {SAP},
+  year         = {2025},
+  title        = {Processing EDI Invoices},
+  entrysubtype = {website},
+  publisher    = {help.sap.com},
+  url          = {https://help.sap.com/docs/SAP_S4HANA_ON-PREMISE/af9ef57f504840d2b81be8667206d485/366fb6531de6b64ce10000000a174cb4.html},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-Parking,
+  organization = {SAP},
+  year         = {2025},
+  title        = {Parking: Complete Invoices for Posting (MM-IV-LIV)},
+  entrysubtype = {website},
+  publisher    = {help.sap.com},
+  url          = {https://help.sap.com/docs/SAP_S4HANA_ON-PREMISE/b54d76b535b74e4aaa852fe31a7974ee/94c6b65334e6b54ce10000000a174cb4.html},
+  urldate      = {2025-10-20}
+}
+
+@online{SAP-Holding-and-Parking,
+  organization = {SAP},
+  title        = {Managing Invoice Holding and Parking},
+  entrysubtype = {website},
+  publisher    = {learning.sap.com},
+  url          = {https://learning.sap.com/learning-journeys/describing-the-payables-management-process-in-sap-s-4hana/managing-invoice-holding-and-parking_a6556206-6ef1-48bb-bcb8-bdb5d742f88e},
+  urldate      = {2025-10-20}
+}
+
+@online{XSUITE-Parking-in-SAP,
+  author       = {Schulze, Jan},
+  year         = {2019},
+  title        = {Invoice Processing in SAP: What Does Parking Actually Do?},
+  entrysubtype = {website},
+  publisher    = {xsuite.com},
+  url          = {https://www.xsuite.com/en/blog/invoice-parking-in-sap},
+  urldate      = {2025-10-20}
+}
+
+@online{JKE-Supply-Chain-Business-Process,
+  author       = {Mishra, Sanjib Kumar and Mishra, Sasmita and Priyadarshini, Rojalina},
+  year         = {2024},
+  title        = {Supply Chain Business Process Re-Engineering: Automate “Logistic Invoice Verification” Payment Block Process—A Case Study on SAP R-Payment Block},
+  entrysubtype = {report},
+  journaltitle = {Journal of the Knowledge Economy},
+  url          = {file:///C:/Users/csabudan/Downloads/s13132-024-02583-8.pdf},
+  urldate      = {2025-10-20}
+}
+
+@online{RAMP-Invoice-Verification,
+  author       = {Nguyen, Ashley},
+  year         = {2025},
+  title        = {What is invoice verification? Types, process, and checklist},
+  entrysubtype = {website},
+  publisher    = {ramp.com},
+  url          = {https://ramp.com/blog/invoice-verification},
+  urldate      = {2025-10-20}
+}
+
+@online{Parseur-AI-Invoice-Processing,
+  organization = {Parseur},
+  year         = {2025},
+  title        = {AI Invoice Processing Benchmarks 2025 - Accuracy, Speed, And Cost Comparison},
+  entrysubtype = {website},
+  publisher    = {parseur.com},
+  url          = {https://parseur.com/blog/ai-invoice-processing-benchmarks},
+  urldate      = {2025-10-20}
+}
+
+@online{Kolleno-PDFs-to-EInvoices,
+  author       = {Anichshuk, Irina},
+  year         = {2025},
+  title        = {How to Move from PDFs to True E-Invoices},
+  entrysubtype = {website},
+  publisher    = {kolleno.com},
+  url          = {https://www.kolleno.com/how-to-move-from-pdfs-to-true-e-invoices},
+  urldate      = {2025-10-20}
+}
+
+@online{Ascendsoftware-Cost-of-Manual,
+  author       = {Baran, Alison},
+  year         = {2025},
+  title        = {The Hidden Cost of Manual: What Five Extra Minutes Per Invoice Is Really Costing Your AP Team},
+  entrysubtype = {blog},
+  publisher    = {ascendsoftware.com},
+  url          = {https://www.ascendsoftware.com/blog/the-hidden-cost-of-manual-what-five-extra-minutes-per-invoice-is-really-costing-your-ap-team},
+  urldate      = {2025-10-20}
+}
+
+@online{Parseur-7-Challenges,
+  organization = {Parseur},
+  year         = {2025},
+  title        = {7 Challenges of Manual Invoice Processing},
+  entrysubtype = {website},
+  publisher    = {parseur.com},
+  url          = {https://parseur.com/blog/manual-invoice-processing-challenges},
+  urldate      = {2025-10-20}
+}
+
+@online{Resolvepay-17-Statistics-Showing,
+  organization = {Resolve pay},
+  year         = {2025},
+  title        = {17 statistics showing the hidden cost of invoice errors and rework},
+  entrysubtype = {website},
+  publisher    = {resolvepay.com},
+  url          = {https://resolvepay.com/blog/17-statistics-showing-the-hidden-cost-of-invoice-errors-and-rework},
+  urldate      = {2025-10-20}
+}
+
+@online{Edenredpay-5-Problems,
+  author       = {Ferro, Cathy},
+  year         = {2020},
+  title        = {5 Problems with Approving Invoices Via E-Mail},
+  entrysubtype = {website},
+  publisher    = {edenredpay.com},
+  url          = {https://edenredpay.com/5-problems-approving-invoices-via-e-mail},
+  urldate      = {2025-10-20}
+}
+
+@online{Caso-Hidden-Costs-of-Manual,
+  author       = {Tamaro, Richard},
+  year         = {2025},
+  title        = {The Hidden Costs of Manual Accounts Payable and How Automation Solves Them},
+  entrysubtype = {website},
+  publisher    = {caso.com},
+  url          = {https://caso.com/2025/03/the-hidden-costs-of-manual-accounts-payable-and-how-automation-solves-them},
+  urldate      = {2025-10-20}
+}
