--- a/Szakdolgozat/Thesis/src/content/introduction.tex
+++ b/Szakdolgozat/Thesis/src/content/introduction.tex
@@ -1,4 +1,4 @@
-% Source 2-84
+
 \chapter{\bevezetes}
 \label{chap:bevezetes}
 
@@ -6,77 +6,78 @@
 \section{Témafelvezetés: A Pénzügyi Funkció Stratégiai Átalakulása}
 \label{sec:temafelvetes}
 
-A pénzügyi funkció (\textit{Finance}) drámai átalakuláson megy keresztül, amelyet a folyamatos költségcsökkentési nyomás és a mélyebb üzleti betekintést igénlő stratégiai tanácsadói szerep iránti növekvő igény egyaránt vezérel.
+A pénzügyi funkció (\textit{Finance}) drámai átalakuláson megy keresztül, amelyet a folyamatos költségcsökkentési nyomás és a mélyebb üzleti betekintést igénylő stratégiai tanácsadói szerep iránti növekvő igény egyaránt vezérel.
 A hagyományos, reaktív és tranzakció-fókuszú ,,eredménykimutató'' (\textit{scorekeeper}) szerepkörből a pénzügy egyre inkább proaktív, ,,stratégiai értékteremtővé'' (\textit{strategic value creator}) válik.
 \subsection{A Szerepkör Forradalma: A Tranzakcióktól a Stratégiáig}
 \label{ssec:szerepkor_forradalma}
 
 A pénzügy jövőbeli alapvető szerepváltása a tranzakciók feldolgozásától a stratégiai partnerség felé mozdul el.
-Ezt a trendet a piacvezető tanácsadó cégek egyértelműen alátámasztják. A Deloitte kiemeli, hogy a pénzügy szerepe ,,a kontrollálástól a stratégiai tervezésig'' (angolul: \textit{from controlling to strategic planning}) mozdul el, és egy ,,előretekintő üzleti funkcióvá válik, amely alakítja az üzleti irányt, ahelyett, hogy egyszerűen a múltbeli eredményekről számolna be.''
+Ezt a trendet a piacvezető tanácsadó cégek egyértelműen alátámasztják. A Deloitte kiemeli, hogy a pénzügy szerepe ,,a kontrollálástól a stratégiai tervezésig'' (angolul: \textit{from controlling to strategic planning}) mozdul el, és egy ,,előretekintő üzleti funkcióvá válik, amely alakítja az üzleti irányt, ahelyett, hogy egyszerűen a múltbeli eredményekről számolna be''\cite{Deloitte-Controlling-Change}.
 
-Ahogy a PwC elemzése fogalmaz, a ,,pénzügy a pénzügyért'' (\textit{finance for finance}) -- vagyis a hagyományos funkciók hatékonyságának növelése -- továbbra is fontos, de a jövő kulcsa a ,,pénzügy az üzletért'' (\textit{finance for business}), amely mélyebb betekintést nyújt az egész szervezetben.
+Ahogy a PwC elemzése fogalmaz, a ,,pénzügy a pénzügyért'' (\textit{finance for finance}) -- vagyis a hagyományos funkciók hatékonyságának növelése -- továbbra is fontos, de a jövő kulcsa a ,,pénzügy az üzletért'' (\textit{finance for business}), amely mélyebb betekintést nyújt az egész szervezetben\cite{PwC-Future-of-Finance}.
 \subsection{A Változás Gátja: A Manuális Munka Fogságában}
 \label{ssec:valtozas_gatja}
 
 Ez az evolúció azonban nem könnyű.
 A stratégiai partnerség legnagyobb akadálya, hogy a magasan képzett pénzügyi csapatok idejét felemésztik a manuális, ismétlődő feladatok.
-A Deloitte nyíltan kimondja, hogy ,,Sok pénzügyi csapat még mindig manuális folyamatokra támaszkodik... ami lassítja a döntéshozatalt, és korlátozza a pénzügyi vezető (CFO) képességét, hogy teljes mértékben stratégiai üzleti partnerként lépjen fel.'' Egy sokat idézett McKinsey tanulmány számszerűsíti a problémát: becslésük szerint a pénzügyi tevékenységek 42\%-a már ma is teljesen automatizálható a meglévő technológiákkal, további 19\% pedig nagyrészt az lenne.
+A Deloitte nyíltan kimondja, hogy ,,Sok pénzügyi csapat még mindig manuális folyamatokra támaszkodik... ami lassítja a döntéshozatalt, és korlátozza a pénzügyi vezető (CFO) képességét, hogy teljes mértékben stratégiai üzleti partnerként lépjen fel''\cite{Deloitte-Finance-2025}. Egy sokat idézett McKinsey tanulmány számszerűsíti a problémát: becslésük szerint a pénzügyi tevékenységek 42\%-a már ma is teljesen automatizálható a meglévő technológiákkal, további 19\% pedig nagyrészt az lenne\cite{McKinsey-Future-of-Finance}.
 Ezen akadály leküzdése miatt válik a technológia az átalakulás abszolút motorjává.
 \subsection{A Technológia Mint Motor: Automatizáció, AI és Adatok}
 \label{ssec:technologia_motor}
 
 Ez a szerepváltás elképhedhetetlen a technológia és az adatok együttes forradalma nélkül.
-\paragraph{A ,,Finance Factory'' és az Automatizáció:} A fókusz a Deloitte által ,,pénzügyi gyárnak'' (\textit{finance factory}) nevezett koncepcióban az operatív, back-office feladatokról egyértelműen a pénzügyi betekintést nyújtó front-office felé tolódik.
-A tranzakcionális tevékenységek szinte teljes automatizálása várható, ami a Gartner szerint ,,a tranzakciós testreszabás végéhez'' (\textit{the end of transactional customization}) vezet.
-A PwC szövege ezt úgy írja le, mint a ,,háromszög megfordítása'': a technológia (AI, ML) lehetővé teszi, hogy a korábban tranzakciókkal terhelt széles bázis helyett a fókusz a cselekvésre ösztönző üzleti intelligenciára kerüljön.
+\paragraph{A ,,Finance Factory'' és az Automatizáció:} A fókusz a Deloitte által ,,pénzügyi gyárnak'' (\textit{finance factory}) nevezett koncepcióban az operatív, back-office feladatokról egyértelműen a pénzügyi betekintést nyújtó front-office felé tolódik\cite{Deloitte-Finance-2025}.
+A tranzakcionális tevékenységek szinte teljes automatizálása várható, ami a Gartner szerint ,,a tranzakciós testreszabás végéhez'' (\textit{the end of transactional customization}) vezet\cite{Gartner-Finance-2030}.
+A PwC szövege ezt úgy írja le, mint a ,,háromszög megfordítása'': a technológia (AI, ML) lehetővé teszi, hogy a korábban tranzakciókkal terhelt széles bázis helyett a fókusz a cselekvésre ösztönző üzleti intelligenciára kerüljön\cite{PwC-Future-of-Finance}.
 \paragraph{A Példa: Számlafeldolgozás (AP):} Ez a stratégiai törekvés már a legalapvetőbb ,,back-office'' funkciókban is megjelenik.
-Az Ardent Partners jelentése szerint még a Számlafeldolgozási (Accounts Payable) osztályok is ,,helyet követelhetnek a stratégiai asztalnál'', mivel az automatizálás révén felszabadult idejüket már nem adatpötyögéssel, hanem készpénzmenedzsmenttel és szállítói kapcsolatok elemzésével tölthetik.
+Az Ardent Partners jelentése szerint még a Számlafeldolgozási (Accounts Payable) osztályok is ,,helyet követelhetnek a stratégiai asztalnál'', mivel az automatizálás révén felszabadult idejüket már nem adatpötyögéssel, hanem készpénzmenedzsmenttel és szállítói kapcsolatok elemzésével tölthetik\cite{Ardent-ePayables-Report}.
 \paragraph{Mesterséges Intelligencia (AI) és Analitika:} A jövő már nem csak az egyszerű automatizálásról szól.
-A Gartner ,,AI ügynökökből álló munkaerőt'' (\textit{a workforce of AI agents}) és ,,gép-dominálta döntéshozatalt'' (\textit{machine-dominated decision making}) vizionál.
+A Gartner ,,AI ügynökökből álló munkaerőt'' (\textit{a workforce of AI agents}) és ,,gép-dominálta döntéshozatalt'' (\textit{machine-dominated decision making}) vizionál\cite{Gartner-Finance-2030}.
 A pénzügyi tervezési és elemzési (FP\&A) funkció átalakításának középpontjában a prediktív analitika és az AI-eszközök állnak.
 \paragraph{Az Adat Mint Alapfeltétel:} Az összes jelentés egyetért abban, hogy a jövő pénzügyi funkciójának alapja a jó minőségű adat.
-Ahogy a Deloitte fogalmaz: a technológia nem lesz ,,csodaszer'' a megfelelő adatarchitektúra nélkül.
-A PwC kiemeli, hogy a vállalati adatmodellekbe és digitális képességekbe történő dedikált befektetés hiányában a pénzügyi vezetők nehezen tudnak majd valódi értéket teremteni.
+Ahogy a Deloitte fogalmaz: a technológia nem lesz ,,csodaszer'' a megfelelő adatarchitektúra nélkül\cite{Deloitte-Finance-2025}.
+A PwC kiemeli, hogy a vállalati adatmodellekbe és digitális képességekbe történő dedikált befektetés hiányában a pénzügyi vezetők nehezen tudnak majd valódi értéket teremteni\cite{PwC-Future-of-Finance}.
 \subsection{Új Fókuszterületek: Tőkeáramlás és Szabályozói Megfelelés}
 \label{ssec:uj_fokuszteruletek}
 
-A stratégiai tanácsadói szerepkör két új, kiemelt fókuszterületet hoz előtérbe, amelyeket a PwC elemzése részletesen tárgyal:
+A stratégiai tanácsadói szerepkör két új, kiemelt fókuszterületet hoz előtérbe, amelyeket a PwC elemzése részletesen tárgyal\cite{PwC-Future-of-Finance}:
 
 \paragraph{Tőke és Cash Flow (\textit{Capital and Cash Flow}):} A bizonytalan gazdasági környezet miatt a készpénzbeszedésre és a működő tőkére irányuló figyelem megnövekedett.
-Kulcsfontosságúvá válik a ,,megrendeléstől a készpénzbeérkezésig'' (\textit{order-to-cash}) folyamat automatizálása. Mivel a cégfelvásárlások és egyéb tranzakciók (M\&A) 2025-ben várhatóan felpörögnek, a CFO-knak újra kell értékelniük, hogy képesek-e következetesen készpénzre váltani a nyereséget.
+Kulcsfontosságúvá válik a ,,megrendeléstől a készpénzbeérkezésig'' (\textit{order-to-cash}) folyamat automatizálása. Mivel a cégfelvásárlások és egyéb tranzakciók (M\&A) 2025-ben várhatóan felpörögnek, a CFO-knak újra kell értékelniük, hogy képesek-e következetesen készpénzre váltani a nyereséget\cite{PwC-Future-of-Finance}.
 \paragraph{Szabályozói Jelentések (\textit{Regulatory Reporting}):} Az új, komplex szabályozási követelmények (mint az OECD Pillar Two, ESG) drámaian megnövelik az átláthatóság és a részletes (granuláris) adatszolgáltatás iránti igényt.
-A PwC felmérése szerint a pénzügyi vezetők 70\%-a kockázatként tekint az amerikai szabályozói környezetre.
-Sok vállalat integrált megoldások híján manuális, szigetszerű adatgyűjtéssel pazarolja az erőforrásait.
+A PwC felmérése szerint a pénzügyi vezetők 70\%-a kockázatként tekint az amerikai szabályozói környezetre\cite{PwC-Future-of-Finance}.
+Sok vállalat integrált megoldások híján manuális, szigetszerű adatgyűjtéssel pazarolja az erőforrásait\cite{PwC-Future-of-Finance}.
 \subsection{Az Átalakuló Működési Modell és a ,,Tehetség-Válság''}
 \label{ssec:mukodesi_modell}
 
 Az új feladatok új munkaszervezést és újfajta munkatársakat igényelnek.
 \paragraph{A Tehetség Kérdése:} A szükséges készségek radikálisan megváltoznak. A hagyományos számviteli tudás helyett a jövő pénzügyi munkatársának erős kommunikációs készségekre, proaktivitásra és ,,digitális hozzáértésre'' lesz szüksége.
-A Deloitte ezt ,,tehetségekért folyó háborúnak'', míg a Gartner egyenesen ,,pénzügyi tehetség-válságnak'' (\textit{finance talent crash}) nevezi, rámutatva, hogy 2019 és 2021 között 300 000 könyvelő hagyta el a pályát.
-A PwC hangsúlyozza, hogy a képzett tehetségekért folyó verseny kemény, ezért a szervezetnek innovatív kultúrát kell kínálnia.
+A Deloitte ezt ,,tehetségekért folyó háborúnak''\cite{Deloitte-Finance-2025}, míg a Gartner egyenesen ,,pénzügyi tehetség-válságnak'' (\textit{finance talent crash}) nevezi\cite{Gartner-Finance-2030}, rámutatva, hogy 2019 és 2021 között 300 000 könyvelő hagyta el a pályát.
+A PwC hangsúlyozza, hogy a képzett tehetségekért folyó verseny kemény, ezért a szervezetnek innovatív kultúrát kell kínálnia\cite{PwC-Future-of-Finance}.
 \paragraph{Új Működési Modellek:} A költségek kordában tartása mellett a szervezeteknek új erőforrásokat is be kell vonniuk.
-A Deloitte kiemeli, hogy a COVID-19 által tesztelt távmunka és hibrid modellek tartósan megmaradnak.
+A Deloitte kiemeli, hogy a COVID-19 által tesztelt távmunka és hibrid modellek tartósan megmaradnak\cite{Deloitte-Finance-2025}.
 Emellett a PwC elemzése rámutat, hogy sok szervezet harmadik fél (pl. menedzselt szolgáltatók) felé szervezi ki a nem alapvető tevékenységeket.
-Ennek célja már nem csupán a költségcsökkentés, hanem a szakemberhiány pótlása és a belső erőforrások felszabadítása az értéknövelő, stratégiai feladatok elvégzésére.
+Ennek célja már nem csupán a költségcsökkentés, hanem a szakemberhiány pótlása és a belső erőforrások felszabadítása az értéknövelő, stratégiai feladatok elvégzésére\cite{PwC-Future-of-Finance}.
 \section{Problémafelvetés: A Manuális Számlafeldolgozás Költségei}
 \label{sec:problemafelvetes}
 
 Ahogy a témafelvezetésben láthattuk, a pénzügyi osztály stratégiai szerepvállalása és a manuális számlafeldolgozás valósága között mély szakadék tátong.
 A szakdolgozat által megoldani kívánt probléma tehát a manuális számlafeldolgozásból eredő közvetlen és közvetett költségek halmaza, amely a legtöbb szervezetnél továbbra is erősen humán-intenzív feladat.
-A közvetlen költségek a legnyilvánvalóbbak: a magasan képzett pénzügyi munkatársak idejüket azzal töltik, hogy PDF-ről vagy papírról adatokat gépelnek át a vállalati rendszerbe (ERP), mint például az SAP.
-Ez a ,,forgószék'' (\textit{swivel-chair}) probléma – ahol a munkatárs egyik monitorról a másikra (vagy papírról a monitorra) viszi át az adatokat – nemcsak lassú és drága, de rendkívül alacsony hozzáadott értékű.
-Ehhez társul a gyakran e-mailben vagy papíron keringtetett jóváhagyatási folyamat, amely lassú, átláthatatlan és nehezen követhető.
+A közvetlen költségek a legnyilvánvalóbbak: a magasan képzett pénzügyi munkatársak idejüket azzal töltik, hogy PDF-ről vagy papírról adatokat gépelnek át a vállalati rendszerbe (ERP), mint például az SAP\cite{Ardent-ePayables-Report}.
+Ez a ,,forgószék'' (\textit{swivel-chair}) probléma – ahol a munkatárs egyik monitorról a másikra (vagy papírról a monitorra) viszi át az adatokat – nemcsak lassú és drága, de rendkívül alacsony hozzáadott értékű\cite{Ardent-ePayables-Report}.
+Ehhez társul a gyakran e-mailben vagy papíron keringtetett jóváhagyatási folyamat, amely lassú, átláthatatlan és nehezen követhető\cite{Ardent-ePayables-Report}.
 Ennél azonban súlyosabbak a folyamat rejtett, közvetett költségei, amelyek a stratégiai célokat is aláássák.
-\paragraph{Pénzügyi veszteség:} A manuális adatrögzítés elkerülhetetlenül hibákhoz vezet, legyen szó elgépelt összegekről, rossz bankszámlaszámról, vagy az egyik leggyakoribb és legköltségesebb hibáról: a duplikált számlák kifizetéséről.
-\paragraph{Határidők mulasztása:} A lassú, e-mail alapú jóváhagyatás miatt a vállalatok gyakran kicsúsznak a fizetési határidőkből, ami késedelmi kötbéreket vonhat maga után.
-Ennél is jelentősebb pénzügyi veszteséget okoz az elvesztett skontó (\textit{early payment discount}) lehetősége: a vállalat nem tud élni a korai fizetésért cserébe felajánlott árengedménnyel, mert a számla még ,,valahol a rendszerben'' várakozik jóváhagyásra.
+\paragraph{Pénzügyi veszteség:} A manuális adatrögzítés elkerülhetetlenül hibákhoz vezet, legyen szó elgépelt összegekről, rossz bankszámlaszámról, vagy az egyik leggyakoribb és legköltségesebb hibáról: a duplikált számlák kifizetéséről\cite{Ardent-ePayables-Report}.
+\paragraph{Határidők mulasztása:} A lassú, e-mail alapú jóváhagyatás miatt a vállalatok gyakran kicsúsznak a fizetési határidőkből, ami késedelmi kötbéreket vonhat maga után\cite{Ardent-ePayables-Report}.
+Ennél is jelentősebb pénzügyi veszteséget okoz az elvesztett skontó (\textit{early payment discount}) lehetősége: a vállalat nem tud élni a korai fizetésért cserébe felajánlott árengedménnyel, mert a számla még ,,valahol a rendszerben'' várakozik jóváhagyásra\cite{Ardent-ePayables-Report}.
 Végül, a manuális folyamat legnagyobb stratégiai hátránya az átláthatóság teljes hiánya.
-A számlák egy ,,fekete lyukba'' kerülnek (pl. egy közös e-mail postafiókba), és a menedzsmentnek nincs valós idejű rálátása arra, hogy mely számla hol tart a feldolgozásban, ki az aktuális felelős, és ami a legfontosabb: mekkora a vállalat pontos, aktuális kötelezettségállománya (\textit{liability}).
-Ez az átláthatóság hiánya lehetetlenné teszi a hatékony készpénzmenedzsmentet és aláássa a pénzügyi osztály azon képességét, hogy a Bevezetésben felvázolt stratégiai partneri szerepet betöltse.
+A számlák egy ,,fekete lyukba'' kerülnek (pl. egy közös e-mail postafiókba), és a menedzsmentnek nincs valós idejű rálátása arra, hogy mely számla hol tart a feldolgozásban, ki az aktuális felelős, és ami a legfontosabb: mekkora a vállalat pontos, aktuális kötelezettségállománya (\textit{liability})\cite{Ardent-ePayables-Report}.
+Ez az átláthatóság hiánya lehetetlenné teszi a hatékony készpénzmenedzsmentet és aláássa a pénzügyi osztály azon képességét, hogy a Bevezetésben felvázolt stratégiai partneri szerepet betöltse\cite{Ardent-ePayables-Report}.
 \section{A Megoldás Iránya: Hyperautomation és az SAP Build Platform}
 \label{sec:megoldas_iranya}
 
-A \textbf{\ref{sec:problemafelvetes}. pontban} vázolt komplex problémákra -- az adatrögzítéstől a jóváhagyási láncon át az átláthatóság hiányáig -- a válasz már nem egyetlen, izolált technológia.
+A \textbf{\ref{sec:problemafelvetes}.
+pontban} vázolt komplex problémákra -- az adatrögzítéstől a jóváhagyási láncon át az átláthatóság hiányáig -- a válasz már nem egyetlen, izolált technológia.
 Míg az automatizálási hullám korai szakaszát a \textit{Robotic Process Automation} (RPA) uralta, amely elsősorban az ismétlődő, szabályalapú kattintásokat váltotta ki, a piac felismerte, hogy ez önmagában kevés.
 A valódi, végponttól végpontig tartó megoldás a \textit{Hyperautomation} (hiperautomatizálás) koncepciója.
 Ez nem egyetlen eszköz, hanem egy üzleti stratégia, amely több technológia -- köztük a Mesterséges Intelligencia (AI), a folyamatmenedzsment (BPM) és az RPA -- integrált alkalmazását jelenti a folyamatok újratervezésére.
@@ -130,14 +131,18 @@ Továbbá a megvalósítás az SAP Business Technology Platform (BTP) ingyenes p
 
 A szakdolgozat a Bevezetésben lefektetett célkitűzések elérése érdekében a következő logikai szerkezet szerint épül fel:
 
-A \textbf{\ref{chap:elmeleti_hatter}. fejezet} bemutatja a dolgozat elméleti alapjait és a felhasznált technológiát.
+A \textbf{\ref{chap:elmeleti_hatter}.
+fejezet} bemutatja a dolgozat elméleti alapjait és a felhasznált technológiát.
 Részletesen tárgyalja a hiperautomatizálás koncepcióját, valamint az SAP Build Process Automation felhőalapú platform eszközkészletét, kitérve annak AI, workflow és RPA képességeire.
 A \textbf{\ref{ch:process-analysis}. fejezet} a vizsgált üzleti folyamatot, a szállítói számlák kezelését elemzi.
 Először bemutatja a standard SAP ,,tankönyvi'' folyamatát, majd azt összeveti egy tipikus vállalati gyakorlattal, feltárva annak manuális hibáit, költségeit és szűk keresztmetszeteit.
 Ez a fejezet alapozza meg a prototípus szükségességét.
 
-A \textbf{\ref{chap:megvalositas}. fejezet} a dolgozat gyakorlati magja, amely részletesen bemutatja az automatizált prototípus tervezésének és megvalósításának lépéseit.
+A \textbf{\ref{chap:megvalositas}.
+fejezet} a dolgozat gyakorlati magja, amely részletesen bemutatja az automatizált prototípus tervezésének és megvalósításának lépéseit.
 Ez magában foglalja az adatkinyerés (AI) konfigurálását, a jóváhagyási logika (workflow) felépítését és az SAP rendszerrel való integrációt (a számla parkolását).
 Az \textbf{\ref{chap:ertekeles}. fejezet} a prototípus tesztelésének eredményeit és a megoldás értékelését tartalmazza.
-A fejezet összehasonlítja az automatizált megoldás hatékonyságát (pl. feldolgozási idő, hibalehetőségek) a \textbf{\ref{ch:process-analysis}. fejezetben} azonosított manuális folyamattal, és javaslatokat fogalmaz meg a lehetséges továbbfejlesztésre.
-Végül a \textbf{\ref{chap:ertekeles}. fejezet} összegzi a dolgozat kutatási eredményeit, válaszol a Bevezetésben feltett kutatási kérdésekre, és levonja a végső következtetéseket.
+A fejezet összehasonlítja az automatizált megoldás hatékonyságát (pl. feldolgozási idő, hibalehetőségek) a \textbf{\ref{ch:process-analysis}.
+fejezetben} azonosított manuális folyamattal, és javaslatokat fogalmaz meg a lehetséges továbbfejlesztésre.
+Végül a \textbf{\ref{chap:ertekeles}.
+fejezet} összegzi a dolgozat kutatási eredményeit, válaszol a Bevezetésben feltett kutatási kérdésekre, és levonja a végső következtetéseket.
